# StringInt-Benchmarks

./: .gitignore  CMakeLists.txt  Compilation Method.md  GenerateGraphs.py  GetCommitHash.cmake  Linux-Clang-int-to-str.md  Linux-Clang-str-to-int-leading-zeros.md  Linux-Clang-str-to-int.md  Linux-GCC-int-to-str.md  Linux-GCC-str-to-int-leading-zeros.md  Linux-GCC-str-to-int.md  ReadMe.md  Windows-MSVC-int-to-str.md  Windows-MSVC-str-to-int-leading-zeros.md  Windows-MSVC-str-to-int.md  macOS-Clang-int-to-str.md  macOS-Clang-str-to-int-leading-zeros.md  macOS-Clang-str-to-int.md  macOS-GCC-int-to-str.md  macOS-GCC-str-to-int-leading-zeros.md  macOS-GCC-str-to-int.md  pgo-build.ps1  pgo-build.sh  push-script.ps1
.github/workflows/: Benchmark.yml
csv/Linux-Clang/int-to-str/: Results.csv  int16-mixed-sign-integer_count[100000].csv  int16-mixed-sign-integer_count[10000].csv  int16-mixed-sign-integer_count[1000].csv  int16-mixed-sign-integer_count[100].csv  int16-negative-integer_count[100000].csv  int16-negative-integer_count[10000].csv  int16-negative-integer_count[1000].csv  int16-negative-integer_count[100].csv  int16-positive-integer_count[100000].csv  int16-positive-integer_count[10000].csv  int16-positive-integer_count[1000].csv  int16-positive-integer_count[100].csv  int32-mixed-sign-integer_count[100000].csv  int32-mixed-sign-integer_count[10000].csv  int32-mixed-sign-integer_count[1000].csv  int32-mixed-sign-integer_count[100].csv  int32-negative-integer_count[100000].csv  int32-negative-integer_count[10000].csv  int32-negative-integer_count[1000].csv  int32-negative-integer_count[100].csv  int32-positive-integer_count[100000].csv  int32-positive-integer_count[10000].csv  int32-positive-integer_count[1000].csv  int32-positive-integer_count[100].csv  int64-mixed-sign-integer_count[100000].csv  int64-mixed-sign-integer_count[10000].csv  int64-mixed-sign-integer_count[1000].csv  int64-mixed-sign-integer_count[100].csv  int64-negative-integer_count[100000].csv  int64-negative-integer_count[10000].csv  int64-negative-integer_count[1000].csv  int64-negative-integer_count[100].csv  int64-positive-integer_count[100000].csv  int64-positive-integer_count[10000].csv  int64-positive-integer_count[1000].csv  int64-positive-integer_count[100].csv  int8-mixed-sign-integer_count[100000].csv  int8-mixed-sign-integer_count[10000].csv  int8-mixed-sign-integer_count[1000].csv  (+25 more)
csv/Linux-Clang/str-to-int/: Results.csv  int16-mixed-sign-integer_count[100000].csv  int16-mixed-sign-integer_count[10000].csv  int16-mixed-sign-integer_count[1000].csv  int16-mixed-sign-integer_count[100].csv  int16-negative-integer_count[100000].csv  int16-negative-integer_count[10000].csv  int16-negative-integer_count[1000].csv  int16-negative-integer_count[100].csv  int16-positive-integer_count[100000].csv  int16-positive-integer_count[10000].csv  int16-positive-integer_count[1000].csv  int16-positive-integer_count[100].csv  int32-mixed-sign-integer_count[100000].csv  int32-mixed-sign-integer_count[10000].csv  int32-mixed-sign-integer_count[1000].csv  int32-mixed-sign-integer_count[100].csv  int32-negative-integer_count[100000].csv  int32-negative-integer_count[10000].csv  int32-negative-integer_count[1000].csv  int32-negative-integer_count[100].csv  int32-positive-integer_count[100000].csv  int32-positive-integer_count[10000].csv  int32-positive-integer_count[1000].csv  int32-positive-integer_count[100].csv  int64-mixed-sign-integer_count[100000].csv  int64-mixed-sign-integer_count[10000].csv  int64-mixed-sign-integer_count[1000].csv  int64-mixed-sign-integer_count[100].csv  int64-negative-integer_count[100000].csv  int64-negative-integer_count[10000].csv  int64-negative-integer_count[1000].csv  int64-negative-integer_count[100].csv  int64-positive-integer_count[100000].csv  int64-positive-integer_count[10000].csv  int64-positive-integer_count[1000].csv  int64-positive-integer_count[100].csv  int8-mixed-sign-integer_count[100000].csv  int8-mixed-sign-integer_count[10000].csv  int8-mixed-sign-integer_count[1000].csv  (+25 more)
csv/Linux-Clang/str-to-int-leading-zeros/: Results.csv  int16-mixed-sign-integer_count[100000].csv  int16-mixed-sign-integer_count[10000].csv  int16-mixed-sign-integer_count[1000].csv  int16-mixed-sign-integer_count[100].csv  int16-negative-integer_count[100000].csv  int16-negative-integer_count[10000].csv  int16-negative-integer_count[1000].csv  int16-negative-integer_count[100].csv  int16-positive-integer_count[100000].csv  int16-positive-integer_count[10000].csv  int16-positive-integer_count[1000].csv  int16-positive-integer_count[100].csv  int32-mixed-sign-integer_count[100000].csv  int32-mixed-sign-integer_count[10000].csv  int32-mixed-sign-integer_count[1000].csv  int32-mixed-sign-integer_count[100].csv  int32-negative-integer_count[100000].csv  int32-negative-integer_count[10000].csv  int32-negative-integer_count[1000].csv  int32-negative-integer_count[100].csv  int32-positive-integer_count[100000].csv  int32-positive-integer_count[10000].csv  int32-positive-integer_count[1000].csv  int32-positive-integer_count[100].csv  int64-mixed-sign-integer_count[100000].csv  int64-mixed-sign-integer_count[10000].csv  int64-mixed-sign-integer_count[1000].csv  int64-mixed-sign-integer_count[100].csv  int64-negative-integer_count[100000].csv  int64-negative-integer_count[10000].csv  int64-negative-integer_count[1000].csv  int64-negative-integer_count[100].csv  int64-positive-integer_count[100000].csv  int64-positive-integer_count[10000].csv  int64-positive-integer_count[1000].csv  int64-positive-integer_count[100].csv  int8-mixed-sign-integer_count[100000].csv  int8-mixed-sign-integer_count[10000].csv  int8-mixed-sign-integer_count[1000].csv  (+25 more)
csv/Linux-GCC/int-to-str/: Results.csv  int16-mixed-sign-integer_count[100000].csv  int16-mixed-sign-integer_count[10000].csv  int16-mixed-sign-integer_count[1000].csv  int16-mixed-sign-integer_count[100].csv  int16-negative-integer_count[100000].csv  int16-negative-integer_count[10000].csv  (+58 more)
source/: i_to_str.hpp  main.cpp  str_to_i.hpp  utility.hpp  void-numerics.cpp
(+1674 files in other folders)
